# src/main/resources/OpenAPI.yaml
@@ -2699,6 +2699,29 @@ components:
         nextPage:
           type: boolean
           description: Is er een volgende pagina
+    ResultsDocumenttype:
+      type: object
+      required:
+        - results
+        - count
+        - previousPage
+        - nextPage
+      properties:
+        results:
+          type: array
+          items:
+            $ref: "#/components/schemas/Documenttype"
+          description: Reslultaten op huidige pagina
+        count:
+          type: integer
+          format: int64
+          description: Totaal aantal
+        previousPage:
+          type: boolean
+          description: Is er een vorige pagina
+        nextPage:
+          type: boolean
+          description: Is er een volgende pagina
     ResultsDomein:
       type: object
       required:
@@ -4422,6 +4445,48 @@ paths:
                 $ref: "#/components/schemas/ValidatieFouten"
       tags:
         - Document Statussen
+  /documenttypen:
+    get:
+      summary: Lijst van documenttypen opvragen
+      operationId: documenttype_list
+      parameters:
+        - name: page
+          in: query
+          schema:
+            type: integer
+            format: int32
+            description: Gewenste pagina; start bij 0
+            default: 0
+        - name: page_size
+          in: query
+          schema:
+            type: integer
+            format: int32
+            description: Maximum aantal items per pagina
+            default: 100
+      responses:
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Fout"
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResultsDocumenttype"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ValidatieFouten"
+      tags:
+        - Documenttypen
   /domeinen:
     get:
       summary: Lijst van domeinen opvragen
